--- a/assets/style.css
+++ b/assets/style.css
@@ -172,7 +172,6 @@ header{
 main{
     width: 100%;
     height: 100vh;
-    background-color: red;
     overflow-y: auto;
     padding-top: 80px;
 }
@@ -216,3 +215,74 @@ main{
     color: white;
 }
 
+/* START TABLE */
+
+tr{
+    border-bottom: 1px solid lightgrey;
+}
+
+
+td{
+    font-size: 13px;
+}
+.avatar{
+    height: 30px;
+}
+
+.done{
+    width: 45px;
+    background-color: rgba(25,135,84,255);
+    color: white;
+    font-size: 10px;
+    border-radius: 30px;
+    padding: .2em;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.process{
+    width: 45px;
+    background-color: rgba(255,195,15,255);
+    color: white;
+    font-size: 10px;
+    border-radius: 30px;
+    padding: .2em;
+    display: flex;
+    justify-content: center;
+}
+
+.failed{
+    width: 45px;
+    background-color: red;
+    color: white;
+    font-size: 10px;
+    border-radius: 30px;
+    padding: .2em;
+    display: flex;
+    justify-content: center;
+}
+
+
+.table-icons{
+    width: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+.table-icon{
+    width: 30px;
+    aspect-ratio: 1/1;
+    padding: .2em;
+    border: 2px solid grey;
+    color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* END TABLE */
+
+.list-group-item{
+    font-size: 13px;
+}
